--- a/assets/css/survey.css
+++ b/assets/css/survey.css
@@ -1,9 +1,102 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  color: rgb(255, 255, 255);
+  background-color: rgb(44, 11, 11);
+  /* outline: 2px dotted green; */
+}
+/* root font-size */
+html {
+  font-size: 20px;
 }
 
+/* container styling */
 .container {
-  max-width: 750px;
-  margin: 20px auto;
+  padding: 35px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#title {
+  color: rgb(138, 23, 23);
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+#description {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.009rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+#name-label,
+#email-label,
+#number-label,
+#comments {
+  font-family: "Courier New", Courier, monospace;
+}
+
+#name,
+#email,
+#number {
+  width: 100%;
+  height: 1.9rem;
+  margin-bottom: 1rem;
+}
+
+.gender,
+.services,
+.recommendation,
+.soc-media {
+  margin-bottom: 1.4rem;
+}
+
+.services #dropdown {
+  width: 100%;
+  height: 1.5rem;
+  font-size: 0.8rem;
+}
+
+.services #dropdown:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(44, 11, 11);
+}
+.s-media {
+  margin-bottom: 0.5rem;
+}
+label {
+  margin-right: 1.9rem;
+}
+
+#additional-comments {
+  margin-bottom: 1.2rem;
+  width: 100%;
+  height: 6rem;
+}
+
+#name:focus,
+#email:focus,
+#number:focus,
+#additional-comments:focus {
+  background-color: rgb(0, 0, 0);
+}
+
+#submit {
+  width: 100%;
+  height: 1.6rem;
+  font-size: 1.09rem;
+  margin-top: 1rem;
+}
+
+.completion {
+  text-align: center;
+}
+
+#submit:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(44, 11, 11);
+  border: 2px solid rgb(0, 0, 0);
 }
