Changing font size on textarea etc

--- a/assets/css/survey.css
+++ b/assets/css/survey.css
@@ -45,6 +45,7 @@ html {
   width: 100%;
   height: 1.9rem;
   margin-bottom: 1rem;
+  font-size: 0.85rem;
 }
 
 .gender,
@@ -75,6 +76,7 @@ label {
   margin-bottom: 1.2rem;
   width: 100%;
   height: 6rem;
+  font-size: 0.8rem;
 }
 
 #name:focus,
